# pertrs

./: Cargo.toml  LICENSE  README.md
src/: dot.rs  main.rs  pert.rs
