[package]
name = "pertrs"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
csv = "1.1.3"
anyhow = "1.0.28"
serde = { version="1.0.106", features=["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
itertools = "0.9.0"
